[tool.poetry]
name = "geoarch"
version = "0.1.0"
description = ""
authors = ["bellezza <bellezza@spaziodati.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
streamlit = "^1.38.0"
seaborn = "^0.13.2"
folium = "^0.17.0"
streamlit-folium = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
